# GPUSketch_bipartite

./: CMakeLists.txt  README.md  main.cpp
datasets/: reddit_100active_2sub_corpus.txt  reddit_100active_3sub_corpus.txt  reddit_100active_4sub_corpus.txt  reddit_100active_5sub_corpus.txt  reddit_100active_6sub_corpus.txt  reddit_100active_7sub_corpus.txt
